syntax = "proto3";

option java_multiple_files = true;
package org.acme;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string clientName = 1;
}

message HelloResponse {
    string message = 1;
}
